--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "localenv": "^0.2.2",
     "typescript-eslint": "0.0.1-alpha.0"
